# ros2_gazebo_train

./: .gitignore  README.md  gazebo_train_install.sh  requirements.txt
.github/workflows/: build.yml
src/gazebo_train_description/: package.xml  setup.cfg  setup.py
src/gazebo_train_description/gazebo_train_description.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gazebo_train_description/gazebo_train_description/urdf/: camera.urdf.xacro  gazebo_train.gv  gazebo_train.urdf  imu.urdf.xacro  laser.urdf.xacro  wheel.urdf.xacro
src/gazebo_train_description/launch/: gazebo_train_description.launch.py
src/gazebo_train_description/meshes/: rad.stl
src/gazebo_train_description/urdf/: camera.urdf.xacro  caster.urdf.xacro  emma.urdf  gazebo_train.gv  gazebo_train.urdf  gazebo_train.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro  wheel.urdf.xacro
src/gazebo_train_driver/: package.xml  setup.cfg  setup.py
src/gazebo_train_driver/gazebo_train_driver/: controller.py  gazebo_train_converter.py  steuerung.py
src/gazebo_train_driver/gazebo_train_driver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gazebo_train_gazebo/: CMakeLists.txt  README.md  package.xml
src/gazebo_train_gazebo/launch/: city_train.launch.py  gazebo_train.launch.py  kmac_indoor.launch.py  kmac_outdoor.launch.py  kmac_train.launch.py  robot_state_publisher.launch.py  spawn_aruco_tag_indoor.launch.py  spawn_aruco_tag_outdoor.launch.py  spawn_aruco_tag_sequence.launch.py  test_train.launch.py
src/gazebo_train_gazebo/rviz/: gazebo_train_rviz.rviz
(+6 files in other folders)
