<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_train_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lf4943s@todo.todo">lf4943s</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
